fix issue with z-index in nav

--- a/sass/components/_navbarHamburgerIcon.scss
+++ b/sass/components/_navbarHamburgerIcon.scss
@@ -6,7 +6,7 @@
 	position: fixed;
 	bottom: 5vh;
 	right: 15px;
-	z-index: 10;
+	z-index: 101;
 	display: flex;
 	justify-content: center;
 	align-items: center;
