--- a/sass/components/_navbarMobileMenu.scss
+++ b/sass/components/_navbarMobileMenu.scss
@@ -4,7 +4,7 @@
 	height: 100vh;
 	// background: rgba(255, 255, 255, 0.9);
 	background: rgba(34, 34, 34, 0.95);
-	z-index: 1;
+	z-index: 100;
 	transition: 300ms all ease-in;
 	display: flex;
 	flex-direction: column;
